force-app/main/default/objects/Frequent_Flyer_Information__c/Frequent_Flyer_Information__c.object-meta.xml
<CustomObject>
    <description>To enter the multiple frequent flyer name &amp; number for the case record type &quot;Frequent Flyer request&quot;.</description>
    <label>Frequent Flyer Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Frequent Flyer Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Frequent Flyer Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>