force-app/main/default/objects/Frequent_Flyer_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Frequent Flyer Informations</relationshipLabel>
    <relationshipName>Frequent_Flyer_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>