force-app/main/default/objects/Frequent_Flyer_Information__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Frequent Flyer Informations</relationshipLabel>
    <relationshipName>Frequent_Flyer_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>