force-app/main/default/objects/Frequent_Flyer_Information__c/fields/Current_Tier__c.field-meta.xml
<CustomField>
    <fullName>Current_Tier__c</fullName>
    <label>Current Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>