force-app/main/default/objects/Frequent_Flyer_Information__c/fields/Freq_Flyer_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Freq_Flyer_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Freq Flyer Expiry Date</label>
    <type>Date</type>
</CustomField>