force-app/main/default/objects/Frequent_Flyer_Information__c/fields/Frequent_Flyer_Email__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Email</label>
    <type>Email</type>
</CustomField>