force-app/main/default/objects/Frequent_Flyer_Information__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual Tier Upgrade</fullName>
            </value>
            <value>
                <fullName>Status Match</fullName>
            </value>
            <value>
                <fullName>Tier Retain – Mbr can only be retained in Exp Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>