force-app/main/default/objects/Frequent_Flyer_Information__c/fields/Upgrade_Tier_Requested__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Tier_Requested__c</fullName>
    <label>Upgrade Tier Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>