force-app/main/default/objects/Frequent_Flyer_Information__c/validationRules/Mandatory_field_for_Request_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_field_for_Request_Type</fullName>
    <active>true</active>
    <description>Used for the &apos;Frequent Flyer Request&apos; record type</description>
    <errorConditionFormula>AND( 
(Case__r.RecordType.DeveloperName = &apos;Frequent_Flyer_Request&apos;), 
(ISPICKVAL(Request_Type__c,&apos;Tier Retain&apos;)), 
OR( 
ISBLANK(Freq_Flyer_Expiry_Date__c) 
) 
)</errorConditionFormula>
    <errorDisplayField>Freq_Flyer_Expiry_Date__c</errorDisplayField>
    <errorMessage>Please fill in the Freq Flyer Expiry Date</errorMessage>
</ValidationRule>