force-app/main/default/objects/Frequent_Flyer_Information__c/validationRules/Sales_Offers_Email_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Offers_Email_is_mandatory</fullName>
    <active>true</active>
    <description>For Sales Offer Request, email address is mandatory</description>
    <errorConditionFormula>AND( 
Case__r.RecordTypeId = &quot;01290000001UPUR&quot;, /*Sales Offers Request*/ 

ISBLANK (  Frequent_Flyer_Email__c )

)</errorConditionFormula>
    <errorDisplayField>Frequent_Flyer_Email__c</errorDisplayField>
    <errorMessage>For Sales Offer Request, email address is mandatory</errorMessage>
</ValidationRule>